[package]
name = "proof-arena-integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
reqwest = { version = "0.12.7", features = ["blocking"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
postcard = { version = "1.0.8", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }